# blueprintpy

./: .gitignore  LICENSE  Makefile  README.md  cleanup.sh  entry_points.cfg  mypy.ini  setup.cfg  template_sample.json
ci_scripts/: functions.sh  vercalc.sh  versioning.sh
develop/: .buildinfo  blueprintpy.cli.args_handler.html  blueprintpy.cli.args_handler.resolver.html  blueprintpy.cli.html  blueprintpy.core.html  easy_usage.html  genindex.html  index.html  package_reference.html  py-modindex.html  search.html  searchindex.js  template_construction.html  template_invocation.html  use_custom_template.html
doc_sources/: conf.py  easy_usage.rst  index.rst  pip_init_cli.args_handler.resolver.rst  pip_init_cli.args_handler.rst
docs/: .buildinfo  blueprintpy.cli.args_handler.html  blueprintpy.cli.args_handler.resolver.html  blueprintpy.cli.html  blueprintpy.core.html  conf.py  easy_usage.html  extract_default.html  genindex.html  index.html  objects.inv  package_reference.html  pip_init.html  pip_init_cli.args_handler.html  pip_init_cli.args_handler.resolver.html  pip_init_cli.html  py-modindex.html  search.html  searchindex.js  src.pip_init.argument.rst  src.pip_init.config.rst  src.pip_init.content.rst  src.pip_init.content_builder.rst  src.pip_init.content_extractor.rst  src.pip_init.prepared_content.rst  src.pip_init.rst  src.pip_init_cli.args_handler.base.rst  src.pip_init_cli.args_handler.default.rst  src.pip_init_cli.args_handler.exceptions.rst  src.pip_init_cli.args_handler.resolver.base.rst  src.pip_init_cli.args_handler.resolver.lists.rst  src.pip_init_cli.args_handler.resolver.numbers.rst  src.pip_init_cli.args_handler.resolver.rst  src.pip_init_cli.args_handler.resolver.string.rst  src.pip_init_cli.args_handler.rst  src.pip_init_cli.cli.rst  src.pip_init_cli.config_loader.rst  src.pip_init_cli.config_serializer.rst  src.pip_init_cli.rst  src.pip_init_internal_templates.default.rst  (+6 more)
(+228 files in other folders)
