#
#
#

[metadata]
name=pip_init
version=0.5.0
description=Pythonに `swift init` や `npm init` のようなパッケージ初期化ツールを提供したい
license=MIT
license_files=file: LICENSE
author=Enchan1207
author_email=enchant0130@gmail.com
url=https://github.com/Enchan1207/pip_init
include_package_data=True
zip_safe=False

[options]
package_dir=
    =src
packages=find:

install_requires =
    Jinja2==3.0.1

entry_points = file: entry_points.cfg

[options.package_data]
pip_init_internal_templates = */**

[options.packages.find]
where=src
