#
#
#

[metadata]
name=pip-init
version=1.0.4
description=Python パッケージテンプレート展開ユーティリティ
long_description=file: README.md
long_description_content_type=text/markdown
license=MIT
license_files=file: LICENSE
author=Enchan1207
author_email=enchant0130@gmail.com
url=https://github.com/Enchan1207/pip_init
project_urls=
    Documentation=https://enchan1207.github.io/pip_init/index.html
include_package_data=True
zip_safe=False

[options]
package_dir=
    =src
packages=find:

install_requires=
    Jinja2==3.0.1

entry_points=file: entry_points.cfg

[options.package_data]
pip_init_internal_templates=*/**

[options.packages.find]
where=src
